# rust4sprint

./: .gitignore  Cargo.toml  README.md  run.sh
.github/workflows/: rust.yml
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs  params.rs  process.rs
image_processor/: Cargo.toml
image_processor/src/: cli.rs  config.rs  images.rs  main.rs  plugins_loader.rs  tools.rs
mirror_plugin/: Cargo.toml  build.rs
mirror_plugin/src/: lib.rs  mirror_plugin.c  mirror_plugin.h
